# rusty_mc_skins

./: .env  .gitignore  Cargo.toml  Concept.md  Dockerfile  README.md  docker-compose.yaml  justfile  mcss.sqlite-shm  mcss.sqlite-wal
.github/workflow/: docker-build.yml
.github/workflows/: docker-image.yml
api/: Cargo.toml
api/src/: app_error.rs  auth.rs  build.rs  db.rs  groups.rs  lib.rs  permissions.rs  server.rs  textures.rs  users.rs
api/src/db/: groups.rs  textures.rs  user.rs
migrations/: 20251005083918_init.sql  20251012171928_add_elytra.sql  20251025110813_groups.sql  20260530171151_group_and_user_addon.sql  20260617150419_sessions.sql
web/: Cargo.toml  tailwind.css
web/assets/: main.scss  tailwind.css
web/src/: build.rs  main.rs  views.rs
web/src/components/: echo.rs  login.rs  mod.rs  navbar.rs  new_texture.rs  texture_card.rs  user_group.rs
web/src/plugins/: mod.rs
web/src/views/: edit_texture.rs  group_edit.rs  group_list.rs  home.rs  navigation.rs  texture_edit.rs  texture_list.rs  user_edit.rs  user_list.rs
