[workspace]
resolver = "2"
members = [
    "web",
    "api",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
axum = { version = "0.7.9"}
tokio = { version = "1"}
serde = { version = "1.0.228" }

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
