[workspace]
resolver = "2"
members = [
    "web",
    "api",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
axum = { version = "0.7.9"}
tokio = { version = "1"}
serde = { version = "1.0.228" }
anyhow = "1.0.100"
sqlx = { version = "=0.8.6", features = ["sqlite","runtime-tokio"] }
uuid = { version = "1.4.3", features = ["serde", "v4"] }
base64 = "0.22.1"
tower-http = { version = "0.6.6", features = ["cors"] }
argon2 = "0.5.3"
rand = "0.9.2"
image = "0.25.8"

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
