[workspace]
resolver = "2"
members = [
    "web",
    "api",
]
default-members = ["web"]

[workspace.dependencies]
dioxus = { version = "0.7.9" }
tokio = { version = "1"}
serde = { version = "1.0.228" }
anyhow = "1.0.102"
sqlx = { version = "=0.9.0", features = ["sqlite","runtime-tokio"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
base64 = "0.22.1"
argon2 = "0.5.3"
image = "0.25.10"
rand_core = { version = "0.6.4", features = ["getrandom"] }
strum = "0.28.0"
strum_macros = "0.28.0"
rfd = {version="0.17.2"}
axum_session = "0.20.1"
axum_session_auth = "0.20.0"
axum_session_sqlx = { version = "0.10.0", features = ["tls-rustls","sqlite"]}
async-trait = { version = "0.1.88"}
bitflags={version = "2.11.1", features = ["serde","std"]}
# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

