[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tokio = { workspace = true, features = ["full"],optional = true }
axum = { workspace = true ,optional = true}
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
sqlx = {workspace = true ,optional = true, features = ["sqlite","runtime-tokio"] }
uuid = { workspace = true ,optional = true, features = ["serde", "v4"] }
base64 = { workspace = true }
tower-http = { workspace = true ,optional = true, features = ["cors"] }
argon2 = { workspace = true ,optional = true}
rand = { workspace = true ,optional = true}
image = { workspace = true }


[features]
default = []
server = ["dioxus/server", "dep:axum", "dep:tokio","dep:sqlx", "dep:uuid", "dep:tower-http","dep:argon2","dep:rand"]
web = ["dioxus/fullstack"]