[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tokio = { workspace = true, features = ["full"], optional = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
sqlx = { workspace = true, optional = true, features = [
    "sqlite",
    "runtime-tokio",
] }
uuid = { workspace = true, optional = true, features = ["serde", "v4"] }
base64 = { workspace = true }
argon2 = { workspace = true, optional = true }
image = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand_core = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, features = ["sqlite"], optional = true }


[features]
default = []
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:sqlx",
    "dep:uuid",
    "dep:argon2",
    "dep:rand_core",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
"dep:async-trait",
]
web = ["dioxus/fullstack"]
