[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
api = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
serde = { workspace = true, features = ["derive"]}
strum = { workspace = true }
rfd = { workspace = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:tokio","api/server"]
